// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextEditor renders correctly 1`] = `
<TextEditor
  disabled={false}
  init={Object {}}
  inline={false}
  menubar={false}
  onEditorChange={[MockFunction]}
  plugins={
    Array [
      "lists advlist",
      "anchor",
      "autolink",
      "autoresize",
      "charmap",
      "code codesample",
      "directionality",
      "emoticons",
      "fullscreen",
      "help",
      "hr",
      "image imagetools",
      "insertdatetime",
      "link",
      "nonbreaking",
      "paste",
      "preview",
      "print",
      "quickbars",
      "searchreplace",
      "table",
      "toc",
      "visualblocks",
      "wordcount",
    ]
  }
  toolbar="newdocument |
            undo redo |
            cut copy paste pastetext |
            link unlink openlink anchor |
            numlist bullist |
            outdent indent |
            blockquote |
            alignleft alignright aligncenter alignjustify |
            bold italic strikethrough underline removeformat |
            formatselect |
            fontselect fontsizeselect forecolor backcolor |
            visualblocks |
            code |"
  value="<p>TextEditor</p>"
>
  <Editor
    apiKey="f3vo81k6z7efry5af62a1l5nm882r1dyrqn2df1cugtsofwq"
    cloudChannel="5"
    disabled={false}
    init={
      Object {
        "menubar": false,
        "selector": undefined,
        "setup": undefined,
      }
    }
    inline={false}
    menubar={false}
    onEditorChange={[MockFunction]}
    plugins={
      Array [
        "lists advlist",
        "anchor",
        "autolink",
        "autoresize",
        "charmap",
        "code codesample",
        "directionality",
        "emoticons",
        "fullscreen",
        "help",
        "hr",
        "image imagetools",
        "insertdatetime",
        "link",
        "nonbreaking",
        "paste",
        "preview",
        "print",
        "quickbars",
        "searchreplace",
        "table",
        "toc",
        "visualblocks",
        "wordcount",
      ]
    }
    toolbar="newdocument |
            undo redo |
            cut copy paste pastetext |
            link unlink openlink anchor |
            numlist bullist |
            outdent indent |
            blockquote |
            alignleft alignright aligncenter alignjustify |
            bold italic strikethrough underline removeformat |
            formatselect |
            fontselect fontsizeselect forecolor backcolor |
            visualblocks |
            code |"
    value="<p>TextEditor</p>"
  >
    <textarea
      id="tiny-react_33179739021612904465037"
      style={
        Object {
          "visibility": "hidden",
        }
      }
    />
  </Editor>
</TextEditor>
`;

exports[`TextEditor renders disabled correctly 1`] = `
<TextEditor
  disabled={true}
  init={Object {}}
  inline={false}
  menubar={false}
  onEditorChange={[MockFunction]}
  plugins={
    Array [
      "lists advlist",
      "anchor",
      "autolink",
      "autoresize",
      "charmap",
      "code codesample",
      "directionality",
      "emoticons",
      "fullscreen",
      "help",
      "hr",
      "image imagetools",
      "insertdatetime",
      "link",
      "nonbreaking",
      "paste",
      "preview",
      "print",
      "quickbars",
      "searchreplace",
      "table",
      "toc",
      "visualblocks",
      "wordcount",
    ]
  }
  toolbar="newdocument |
            undo redo |
            cut copy paste pastetext |
            link unlink openlink anchor |
            numlist bullist |
            outdent indent |
            blockquote |
            alignleft alignright aligncenter alignjustify |
            bold italic strikethrough underline removeformat |
            formatselect |
            fontselect fontsizeselect forecolor backcolor |
            visualblocks |
            code |"
  value="<p>TextEditor</p>"
>
  <Editor
    apiKey="f3vo81k6z7efry5af62a1l5nm882r1dyrqn2df1cugtsofwq"
    cloudChannel="5"
    disabled={true}
    init={
      Object {
        "menubar": false,
        "selector": undefined,
        "setup": undefined,
      }
    }
    inline={false}
    menubar={false}
    onEditorChange={[MockFunction]}
    plugins={
      Array [
        "lists advlist",
        "anchor",
        "autolink",
        "autoresize",
        "charmap",
        "code codesample",
        "directionality",
        "emoticons",
        "fullscreen",
        "help",
        "hr",
        "image imagetools",
        "insertdatetime",
        "link",
        "nonbreaking",
        "paste",
        "preview",
        "print",
        "quickbars",
        "searchreplace",
        "table",
        "toc",
        "visualblocks",
        "wordcount",
      ]
    }
    toolbar="newdocument |
            undo redo |
            cut copy paste pastetext |
            link unlink openlink anchor |
            numlist bullist |
            outdent indent |
            blockquote |
            alignleft alignright aligncenter alignjustify |
            bold italic strikethrough underline removeformat |
            formatselect |
            fontselect fontsizeselect forecolor backcolor |
            visualblocks |
            code |"
    value="<p>TextEditor</p>"
  >
    <textarea
      id="tiny-react_19561344441612904465062"
      style={
        Object {
          "visibility": "hidden",
        }
      }
    />
  </Editor>
</TextEditor>
`;

exports[`TextEditor renders inline correctly 1`] = `
<TextEditor
  disabled={false}
  init={Object {}}
  inline={true}
  menubar={false}
  onEditorChange={[MockFunction]}
  plugins={
    Array [
      "lists advlist",
      "anchor",
      "autolink",
      "autoresize",
      "charmap",
      "code codesample",
      "directionality",
      "emoticons",
      "fullscreen",
      "help",
      "hr",
      "image imagetools",
      "insertdatetime",
      "link",
      "nonbreaking",
      "paste",
      "preview",
      "print",
      "quickbars",
      "searchreplace",
      "table",
      "toc",
      "visualblocks",
      "wordcount",
    ]
  }
  toolbar="newdocument |
            undo redo |
            cut copy paste pastetext |
            link unlink openlink anchor |
            numlist bullist |
            outdent indent |
            blockquote |
            alignleft alignright aligncenter alignjustify |
            bold italic strikethrough underline removeformat |
            formatselect |
            fontselect fontsizeselect forecolor backcolor |
            visualblocks |
            code |"
  value="<p>TextEditor</p>"
>
  <Editor
    apiKey="f3vo81k6z7efry5af62a1l5nm882r1dyrqn2df1cugtsofwq"
    cloudChannel="5"
    disabled={false}
    init={
      Object {
        "menubar": false,
        "selector": undefined,
        "setup": undefined,
      }
    }
    inline={true}
    menubar={false}
    onEditorChange={[MockFunction]}
    plugins={
      Array [
        "lists advlist",
        "anchor",
        "autolink",
        "autoresize",
        "charmap",
        "code codesample",
        "directionality",
        "emoticons",
        "fullscreen",
        "help",
        "hr",
        "image imagetools",
        "insertdatetime",
        "link",
        "nonbreaking",
        "paste",
        "preview",
        "print",
        "quickbars",
        "searchreplace",
        "table",
        "toc",
        "visualblocks",
        "wordcount",
      ]
    }
    toolbar="newdocument |
            undo redo |
            cut copy paste pastetext |
            link unlink openlink anchor |
            numlist bullist |
            outdent indent |
            blockquote |
            alignleft alignright aligncenter alignjustify |
            bold italic strikethrough underline removeformat |
            formatselect |
            fontselect fontsizeselect forecolor backcolor |
            visualblocks |
            code |"
    value="<p>TextEditor</p>"
  >
    <div
      id="tiny-react_90559280131612904465060"
    />
  </Editor>
</TextEditor>
`;

exports[`TextEditor renders with menubar correctly 1`] = `
<TextEditor
  disabled={false}
  init={Object {}}
  inline={false}
  menubar={true}
  onEditorChange={[MockFunction]}
  plugins={
    Array [
      "lists advlist",
      "anchor",
      "autolink",
      "autoresize",
      "charmap",
      "code codesample",
      "directionality",
      "emoticons",
      "fullscreen",
      "help",
      "hr",
      "image imagetools",
      "insertdatetime",
      "link",
      "nonbreaking",
      "paste",
      "preview",
      "print",
      "quickbars",
      "searchreplace",
      "table",
      "toc",
      "visualblocks",
      "wordcount",
    ]
  }
  toolbar="newdocument |
            undo redo |
            cut copy paste pastetext |
            link unlink openlink anchor |
            numlist bullist |
            outdent indent |
            blockquote |
            alignleft alignright aligncenter alignjustify |
            bold italic strikethrough underline removeformat |
            formatselect |
            fontselect fontsizeselect forecolor backcolor |
            visualblocks |
            code |"
  value="<p>TextEditor</p>"
>
  <Editor
    apiKey="f3vo81k6z7efry5af62a1l5nm882r1dyrqn2df1cugtsofwq"
    cloudChannel="5"
    disabled={false}
    init={
      Object {
        "menubar": true,
        "selector": undefined,
        "setup": undefined,
      }
    }
    inline={false}
    menubar={true}
    onEditorChange={[MockFunction]}
    plugins={
      Array [
        "lists advlist",
        "anchor",
        "autolink",
        "autoresize",
        "charmap",
        "code codesample",
        "directionality",
        "emoticons",
        "fullscreen",
        "help",
        "hr",
        "image imagetools",
        "insertdatetime",
        "link",
        "nonbreaking",
        "paste",
        "preview",
        "print",
        "quickbars",
        "searchreplace",
        "table",
        "toc",
        "visualblocks",
        "wordcount",
      ]
    }
    toolbar="newdocument |
            undo redo |
            cut copy paste pastetext |
            link unlink openlink anchor |
            numlist bullist |
            outdent indent |
            blockquote |
            alignleft alignright aligncenter alignjustify |
            bold italic strikethrough underline removeformat |
            formatselect |
            fontselect fontsizeselect forecolor backcolor |
            visualblocks |
            code |"
    value="<p>TextEditor</p>"
  >
    <textarea
      id="tiny-react_97260822951612904465065"
      style={
        Object {
          "visibility": "hidden",
        }
      }
    />
  </Editor>
</TextEditor>
`;
